--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,12 @@
-@import url(../../helpers/core.css);
+h1 {
+  margin-top: 1.5rem;
+  font-size: 5rem;
+  text-align: center;
+  background: -webkit-linear-gradient(rgb(62, 143, 170), rgb(251, 245, 245));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 2px black;
+}
 
 .carousel {
   position: relative;
@@ -7,7 +15,7 @@
 }
 
 .img-frame {
-  margin-top: 8rem;
+  margin-top: 5rem;
   width: 550px;
   height: 550px;
   overflow: hidden;
@@ -41,8 +49,9 @@ img {
 .left-handle {
   color: white;
   background-color: black;
-  font-size: xx-large;
   padding-left: 20px;
+  padding-bottom: 20px;
+  font-size: 3rem;
   font-weight: 900;
   top: 50%;
   left: 0;
@@ -59,10 +68,11 @@ img {
   top: 50%;
   color: white;
   background-color: black;
-  font-size: xx-large;
+  padding-bottom: 20px;
+  font-size: 3rem;
   padding-left: 20px;
   font-weight: 900;
-  transform: translate(750%, -50%);
+  transform: translate(755%, -50%);
 }
 
 .dot-holder {
